# MagicCube

./: CMakeLists.txt  Cube3.cpp  Cube3.h  file.txt  main.cpp
Abstract Cube/: AbstractCube.cpp  AbstractCube.h  Side.cpp  Side.h
Consol/: ConsolOut.cpp  ConsolOut.h
Cube/: Cube.cpp  Cube.h  Side.h
GUI/: Button.cpp  Button.h  Drawer.cpp  Drawer.h
Tests/: test1  tests.cpp
html/: _2home_2art_2_c_lion_projects_2_rubicks_cube_2_cube_2_cube_8h-example.html  _2home_2art_2_university_2_p_pv_i_s_2laba1_2_rubicks_cube_2_cube_2_cube_8h-example.html  _button_8h_source.html  _cube3_8h_source.html  _cube_8h_source.html  _drawer_8h_source.html  _side_8h_source.html  annotated.html  annotated_dup.js  catch_8hpp_source.html  class_button-members.html  class_button.html  class_button.js  class_catch_1_1_assertion_handler-members.html  class_catch_1_1_assertion_handler.html  class_catch_1_1_binary_expr-members.html  class_catch_1_1_binary_expr.html  class_catch_1_1_capturer-members.html  class_catch_1_1_capturer.html  class_catch_1_1_detail_1_1_approx-members.html  class_catch_1_1_detail_1_1_approx.html  class_catch_1_1_detail_1_1_is_stream_insertable-members.html  class_catch_1_1_detail_1_1_is_stream_insertable.html  class_catch_1_1_exception_translator_registrar-members.html  class_catch_1_1_exception_translator_registrar.html  class_catch_1_1_expr_lhs-members.html  class_catch_1_1_expr_lhs.html  class_catch_1_1_generator_exception-members.html  class_catch_1_1_generator_exception.html  class_catch_1_1_generators_1_1_chunk_generator-members.html  (+318 more)
latex/: annotated.tex  (+154 more)
(+59 files in other folders)
